package com.shigu.main4.order.model;

/**
 * 产品
 * Created by zhaohongbo on 17/6/1.
 */
public interface Product{

}
