@startuml

interface Cart{
void addProduct(Product pro);
void rmProduct(Long cartId);
Long modifyProductNumber(Long cartId,Integer number);
Long modifyProductSku(Long cartId,Long skuId);
}

interface Product{

}

interface ItemProduct{
List<SkuVO> selSkus();
void modifyWeight(Long meter);
void modifyPrice(Long price);
Long selWeight();
}

class ItemProductVO{
-Long pid;
-Long goodsId;
-String webSite;
-String picUrl;
-String title;
-Long price;
-String marketName;
-String floor;
-String shopNum;
-Long marketId;
-Long floorId;
-Long shopId;
-Long weight;
-ItemSkuVO sku;
}

class ItemSkuVO{
-Long skuId;
-Long pid;
-String color;
-String size;
}

Cart *-- Product
Product <|-- ItemProduct
ItemProduct <|-- ItemProductVO
ItemProductVO --o ItemSkuVO

@enduml